# ChangeLog for sys-apps/hal
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.215 2007/11/23 06:29:51 compnerd Exp $

*hal-0.5.10 (23 Nov 2007)

  23 Nov 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/0.5.10-hald.conf, +files/0.5.10-hald.rc,
  +files/hal-0.5.9-hide-recovery-partitions.patch, +hal-0.5.10.ebuild:
  Version bump from upstream

  22 Nov 2007; Doug Klima <cardoe@gentoo.org> metadata.xml:
  Provide explicit USE flag descriptions in metadata.xml

  21 Nov 2007; nixnut <nixnut@gentoo.org> hal-0.5.9.1-r3.ebuild:
  Stable on ppc wrt bug 199654

  12 Nov 2007; Samuli Suominen <drac@gentoo.org> hal-0.5.9.1-r3.ebuild:
  amd64 stable

  12 Nov 2007; Raúl Porcel <armin76@gentoo.org> hal-0.5.9.1-r3.ebuild:
  alpha/ia64/sparc/x86 stable

*hal-0.5.9.1-r3 (04 Nov 2007)

  04 Nov 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  +hal-0.5.9.1-r3.ebuild:
  Bump pciutils dep to drop the zlib die

  31 Aug 2007; Doug Goldstein <cardoe@gentoo.org> hal-0.5.9-r1.ebuild,
  hal-0.5.9.1-r1.ebuild, hal-0.5.9.1-r2.ebuild:
  change libparted depend as suggested by agaffney in bug #190860

*hal-0.5.9.1-r2 (28 Aug 2007)

  28 Aug 2007; Doug Goldstein <cardoe@gentoo.org> +hal-0.5.9.1-r2.ebuild:
  fixed bug #188911. switched to patch tarballs and using git so this is more
  of an experiment revision

  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> hal-0.5.9.1-r1.ebuild:
  Stable for HPPA (bug #185823).

  14 Aug 2007; Benjamin Smee <strerror@gentoo.org> ChangeLog:
  Change for bug #188772

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> hal-0.5.9.1-r1.ebuild:
  Stable on sparc wrt #185823

  06 Aug 2007; Raúl Porcel <armin76@gentoo.org> hal-0.5.9.1-r1.ebuild:
  alpha stable

  06 Aug 2007; Mike Frysinger <vapier@gentoo.org> hal-0.5.9-r1.ebuild,
  hal-0.5.9.1-r1.ebuild:
  Also check for USE=hal hack.

  03 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>