@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/hal-0.5.9.1-r2.ebuild,v 1.2 2007/08/31 14:19:51 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/hal-0.5.9.1-r2.ebuild,v 1.3 2007/11/23 06:43:51 compnerd Exp $
 
 inherit eutils linux-info autotools flag-o-matic
 
@@ -114,7 +114,7 @@ pkg_setup() {
 
 src_unpack() {
 	unpack ${A}
-	cd ${S}
+	cd "${S}"
 
 	EPATCH_SUFFIX="patch" \
 	EPATCH_FORCE="yes" \
