@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/hal
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.215 2007/11/23 06:29:51 compnerd Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.216 2007/11/23 06:43:51 compnerd Exp $
+
+  23 Nov 2007; Saleem Abdulrasool <compnerd@gentoo.org>
+  hal-0.5.7.1-r5.ebuild, hal-0.5.9-r1.ebuild, hal-0.5.9.1-r1.ebuild,
+  hal-0.5.9.1-r2.ebuild, hal-0.5.9.1-r3.ebuild:
+  Fix quoting issues
 
 *hal-0.5.10 (23 Nov 2007)
 
